--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="index.html">
                 <img src="img/logos/small-screens/logo.png" alt="Logo Vivian">
             </a>
+
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
@@ -23,7 +24,6 @@
                 </ul>
             </nav>
         </div>
-
     </header>
 
     <main>
@@ -159,10 +159,8 @@
                 <ul>
                     <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    </li>
-                    <li><a href="https://www.behance.net" target="_blank"><i
-                                class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.behance.net" target="_blank"><i class="fa-brands fa-square-behance"></i></a></li>
                 </ul>
             </div>
 
