Revert "Update index.html"
This reverts commit 5b40b32987973acb969727872c251f5b78723f32.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width= , initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/logos/small-screens/favicon-icon-flower.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
-    <title>UI Portfolio</title>
+    <title>UI Portfolio - Vivian - United Kingdom</title>
 </head>
 
 <body>
