--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="pages/about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
