--- a/pages/frugalityfirst.html
+++ b/pages/frugalityfirst.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <div>
-            <a href="index.html">
-                <img src="img/logos/small-screens/logo.png" alt="Logo Vivian">
+            <a href="../index.html">
+                <img src="../img/logos/small-screens/logo.png" alt="Logo Vivian">
             </a>
 
             <nav>
                 <ul>
-                    <li><a href="index.html">Work</a></li>
+                    <li><a href="../index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
