Add project links

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             Iconography.
                         </p>
 
-                        <a href="#">Project Link</a>
+                        <a href="pages/stitched.html">Project Link</a>
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                             Flow/Activity Diagram.
                         </p>
 
-                        <a href="#">Project Link</a>
+                        <a href="pages/healthy-eats.html">Project Link</a>
                     </div>
                 </div>
 
@@ -113,7 +113,7 @@
                             Flow/Activity Diagram.
                         </p>
 
-                        <a href="#">Project Link</a>
+                        <a href="pages/cinemagic.html">Project Link</a>
                     </div>
                 </div>
 
@@ -136,7 +136,7 @@
                             Iconography, User Flow/Activity Diagram.
                         </p>
 
-                        <a href="#">Project Link</a>
+                        <a href="pages/frugalityfirst.html">Project Link</a>
                     </div>
                 </div>
             </div>
