Update directory path for profile image

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,8 +36,8 @@
         <div>
             <div>
                 <picture>
-                    <source media="(min-width:992px)" srcset="img/self-portrait/big-screens/self-portrait.png">
-                    <img src="img/self-portrait/small-screens/self-portrait.png" alt="Image of Vivian.">
+                    <source media="(min-width:992px)" srcset="../img/self-portrait/big-screens/self-portrait.png">
+                    <img src="../img/self-portrait/small-screens/self-portrait.png" alt="Image of Vivian.">
                 </picture>
 
                 <div>
