Add intro text to stitched.html

--- a/pages/stitched.html
+++ b/pages/stitched.html
@@ -28,7 +28,55 @@
 
     <main>
         <section>
+            <div>
+                <h1>Stitched</h1>
+            </div>
+        </section>
 
+        <section>
+            <div>
+                <div>
+                    <h2>My Process</h2>
+                </div>
+
+                <div>
+                    <div>
+                        <h2>Overview</h2>
+                    </div>
+
+                    <p>
+                        This project is about designing a web application for mobile phones which allow users to buy and
+                        sell vintage clothing. It includes 10 high-fidelity wireframes, all with key features added onto
+                        each. Also, it has 6 key functionalities, in total, for the users to interact with. Other
+                        clothing apps were researched and analysed to study the functionalities they offer. These mobile
+                        designs are aimed at the 25 to 34 year old demographic. A fun and vibrant colour palette was
+                        used to appeal to a younger audience.
+                    </p>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <div>Stages</div>
+                </div>
+
+                <div>
+                    <p>
+                        Objective: To design the UI for the mobile version of a vintage clothing e-commerce app and
+                        prepare for handover to developers.
+                    </p>
+
+                    <div>
+                        <p>
+                            Low-fi wireframes: Balsamiq Wireframes was used to arrange the placement of different
+                            components
+                            and elements used for each page.
+                        </p>
+
+
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -48,8 +96,10 @@
                 <ul>
                     <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.behance.net" target="_blank"><i class="fa-brands fa-square-behance"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.behance.net" target="_blank"><i
+                                class="fa-brands fa-square-behance"></i></a></li>
                 </ul>
             </div>
 
