Add low fidelity wireframes

--- a/pages/stitched.html
+++ b/pages/stitched.html
@@ -73,7 +73,75 @@
                             and elements used for each page.
                         </p>
 
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/stitched/low-fi/big-screens/1-login.png">
+                                <img src="../img/stitched/low-fi/small-screens/1-login.png"
+                                    alt="Stitched 'login' low fidelity wireframe.">
+                            </picture>
 
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/2-sign-up.png">
+                                <img src="../img/stitched/low-fi/small-screens/2-sign-up.png"
+                                    alt="Stitched 'sign up' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/3-upload-items.png">
+                                <img src="../img/stitched/low-fi/small-screens/3-upload-items.png"
+                                    alt="Stitched 'upload items' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/4-gallery.png">
+                                <img src="../img/stitched/low-fi/small-screens/4-gallery.png"
+                                    alt="Stitched 'gallery' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/5-product.png">
+                                <img src="../img/stitched/low-fi/small-screens/5-product.png"
+                                    alt="Stitched 'product' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/6-customer-reviews.png">
+                                <img src="../img/stitched/low-fi/small-screens/6-customer-reviews.png"
+                                    alt="Stitched 'customer-reviews' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/7-write-a-review.png">
+                                <img src="../img/stitched/low-fi/small-screens/7-write-a-review.png"
+                                    alt="Stitched 'write a review' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/stitched/low-fi/big-screens/8-basket.png">
+                                <img src="../img/stitched/low-fi/small-screens/8-basket.png"
+                                    alt="Stitched 'basket' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/9-payment.png">
+                                <img src="../img/stitched/low-fi/small-screens/9-payment.png"
+                                    alt="Stitched 'payment' low fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/10-search-items.png">
+                                <img src="../img/stitched/low-fi/small-screens/10-search-items.png"
+                                    alt="Stitched 'search items' low fidelity wireframe.">
+                            </picture>
+                        </div>
                     </div>
                 </div>
             </div>
