Add mid fidelity wireframe text and images

--- a/pages/stitched.html
+++ b/pages/stitched.html
@@ -69,8 +69,7 @@
                     <div>
                         <p>
                             Low-fi wireframes: Balsamiq Wireframes was used to arrange the placement of different
-                            components
-                            and elements used for each page.
+                            components and elements used for each page.
                         </p>
 
                         <div>
@@ -143,6 +142,83 @@
                             </picture>
                         </div>
                     </div>
+
+                    <div>
+                        <p>
+                            Mid-fi wireframes: Figma was used to edit the arrangement of the selected components and elements used for each page. Real text was added to buttons, titles, sub-headings, paragraph sections, etc.
+                        </p>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/stitched/mid-fi/big-screens/1-login.png">
+                                <img src="../img/stitched/mid-fi/small-screens/1-login.png"
+                                    alt="Stitched 'login' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/2-sign-up.png">
+                                <img src="../img/stitched/mid-fi/small-screens/2-sign-up.png"
+                                    alt="Stitched 'sign up' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/3-upload-items.png">
+                                <img src="../img/stitched/mid-fi/small-screens/3-upload-items.png"
+                                    alt="Stitched 'upload items' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/4-gallery.png">
+                                <img src="../img/stitched/mid-fi/small-screens/4-gallery.png"
+                                    alt="Stitched 'gallery' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/5-product.png">
+                                <img src="../img/stitched/mid-fi/small-screens/5-product.png"
+                                    alt="Stitched 'product' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/6-customer-reviews.png">
+                                <img src="../img/stitched/mid-fi/small-screens/6-customer-reviews.png"
+                                    alt="Stitched 'customer-reviews' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/7-write-a-review.png">
+                                <img src="../img/stitched/mid-fi/small-screens/7-write-a-review.png"
+                                    alt="Stitched 'write a review' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)" srcset="../img/stitched/mid-fi/big-screens/8-basket.png">
+                                <img src="../img/stitched/mid-fi/small-screens/8-basket.png"
+                                    alt="Stitched 'basket' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/9-payment.png">
+                                <img src="../img/stitched/mid-fi/small-screens/9-payment.png"
+                                    alt="Stitched 'payment' mid fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/10-search-items.png">
+                                <img src="../img/stitched/mid-fi/small-screens/10-search-items.png"
+                                    alt="Stitched 'search items' mid fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
