Add hi fidelity text and images

--- a/pages/stitched.html
+++ b/pages/stitched.html
@@ -61,20 +61,26 @@
                 </div>
 
                 <div>
-                    <p>
-                        Objective: To design the UI for the mobile version of a vintage clothing e-commerce app and
-                        prepare for handover to developers.
-                    </p>
-
                     <div>
                         <p>
-                            Low-fi wireframes: Balsamiq Wireframes was used to arrange the placement of different
-                            components and elements used for each page.
+                            Objective: To design the UI for the mobile version of a vintage clothing e-commerce app and
+                            prepare for handover to developers.
                         </p>
+                    </div>
+
+                    <!-- low fi -->
+                    <div>
+                        <div>
+                            <p>
+                                Low-fi wireframes: Balsamiq Wireframes was used to arrange the placement of different
+                                components and elements used for each page.
+                            </p>
+                        </div>
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/stitched/low-fi/big-screens/1-login.png">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/1-login.png">
                                 <img src="../img/stitched/low-fi/small-screens/1-login.png"
                                     alt="Stitched 'login' low fidelity wireframe.">
                             </picture>
@@ -122,7 +128,8 @@
                             </picture>
 
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/stitched/low-fi/big-screens/8-basket.png">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/low-fi/big-screens/8-basket.png">
                                 <img src="../img/stitched/low-fi/small-screens/8-basket.png"
                                     alt="Stitched 'basket' low fidelity wireframe.">
                             </picture>
@@ -143,14 +150,21 @@
                         </div>
                     </div>
 
+                    <!-- mid fi -->
                     <div>
-                        <p>
-                            Mid-fi wireframes: Figma was used to edit the arrangement of the selected components and elements used for each page. Real text was added to buttons, titles, sub-headings, paragraph sections, etc.
-                        </p>
+                        <div>
+                            <p>
+                                Mid-fi wireframes: Figma was used to edit the arrangement of the selected components and
+                                elements used for each page. Real text was added to buttons, titles, sub-headings,
+                                paragraph
+                                sections, etc.
+                            </p>
+                        </div>
 
                         <div>
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/stitched/mid-fi/big-screens/1-login.png">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/1-login.png">
                                 <img src="../img/stitched/mid-fi/small-screens/1-login.png"
                                     alt="Stitched 'login' mid fidelity wireframe.">
                             </picture>
@@ -198,7 +212,8 @@
                             </picture>
 
                             <picture>
-                                <source media="(min-width:992px)" srcset="../img/stitched/mid-fi/big-screens/8-basket.png">
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mid-fi/big-screens/8-basket.png">
                                 <img src="../img/stitched/mid-fi/small-screens/8-basket.png"
                                     alt="Stitched 'basket' mid fidelity wireframe.">
                             </picture>
@@ -215,6 +230,87 @@
                                     srcset="../img/stitched/mid-fi/big-screens/10-search-items.png">
                                 <img src="../img/stitched/mid-fi/small-screens/10-search-items.png"
                                     alt="Stitched 'search items' mid fidelity wireframe.">
+                            </picture>
+                        </div>
+                    </div>
+
+                    <!-- hi fi -->
+                    <div>
+                        <div>
+                            <p>
+                                High-fi wireframes: Figma was used to add colour to the wireframes, using a colour scheme from the style guide. The style guide's typography was also applied at this stage.
+                            </p>
+                        </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/1-login.png">
+                                <img src="../img/stitched/hi-fi/small-screens/1-login.png"
+                                    alt="Stitched 'login' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/2-sign-up.png">
+                                <img src="../img/stitched/hi-fi/small-screens/2-sign-up.png"
+                                    alt="Stitched 'sign up' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/3-upload-items.png">
+                                <img src="../img/stitched/hi-fi/small-screens/3-upload-items.png"
+                                    alt="Stitched 'upload items' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/4-gallery.png">
+                                <img src="../img/stitched/hi-fi/small-screens/4-gallery.png"
+                                    alt="Stitched 'gallery' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/5-product.png">
+                                <img src="../img/stitched/hi-fi/small-screens/5-product.png"
+                                    alt="Stitched 'product' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/6-customer-reviews.png">
+                                <img src="../img/stitched/hi-fi/small-screens/6-customer-reviews.png"
+                                    alt="Stitched 'customer-reviews' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/7-write-a-review.png">
+                                <img src="../img/stitched/hi-fi/small-screens/7-write-a-review.png"
+                                    alt="Stitched 'write a review' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/8-basket.png">
+                                <img src="../img/stitched/hi-fi/small-screens/8-basket.png"
+                                    alt="Stitched 'basket' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/9-payment.png">
+                                <img src="../img/stitched/hi-fi/small-screens/9-payment.png"
+                                    alt="Stitched 'payment' hi fidelity wireframe.">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/hi-fi/big-screens/10-search-items.png">
+                                <img src="../img/stitched/hi-fi/small-screens/10-search-items.png"
+                                    alt="Stitched 'search items' hi fidelity wireframe.">
                             </picture>
                         </div>
                     </div>
