--- a/pages/stitched.html
+++ b/pages/stitched.html
@@ -39,41 +39,57 @@
                     <h2>My Process</h2>
                 </div>
 
+                <!-- overview -->
                 <div>
                     <div>
                         <h2>Overview</h2>
                     </div>
 
-                    <p>
-                        This project is about designing a web application for mobile phones which allow users to buy and
-                        sell vintage clothing. It includes 10 high-fidelity wireframes, all with key features added onto
-                        each. Also, it has 6 key functionalities, in total, for the users to interact with. Other
-                        clothing apps were researched and analysed to study the functionalities they offer. These mobile
-                        designs are aimed at the 25 to 34 year old demographic. A fun and vibrant colour palette was
-                        used to appeal to a younger audience.
-                    </p>
-                </div>
-            </div>
-
-            <div>
-                <div>
-                    <div>Stages</div>
-                </div>
-
-                <div>
                     <div>
                         <p>
-                            Objective: To design the UI for the mobile version of a vintage clothing e-commerce app and
-                            prepare for handover to developers.
+                            This project is about designing a web application for mobile phones which allow users to buy
+                            and sell vintage clothing. It includes 10 high-fidelity wireframes, all with key features
+                            added
+                            onto each. Also, it has 6 key functionalities, in total, for the users to interact with.
+                            Other
+                            clothing apps were researched and analysed to study the functionalities they offer. These
+                            mobile designs are aimed at the 25 to 34 year old demographic. A fun and vibrant colour
+                            palette was
+                            used to appeal to a younger audience.
                         </p>
+                    </div>
+                </div>
+
+                <!-- overall process stages -->
+                <div>
+                    <div>
+                        <h2>Overall process stages</h2>
+                    </div>
+
+                    <!-- objective -->
+                    <div>
+                        <div>
+                            <h3>Objective</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                To design the UI for the mobile version of a vintage clothing e-commerce app and prepare
+                                for handover to developers.
+                            </p>
+                        </div>
                     </div>
 
                     <!-- low fi -->
                     <div>
                         <div>
+                            <h3>Low-fi wireframes</h3>
+                        </div>
+
+                        <div>
                             <p>
-                                Low-fi wireframes: Balsamiq Wireframes was used to arrange the placement of different
-                                components and elements used for each page.
+                                Balsamiq Wireframes was used to arrange the placement of different components and
+                                elements used for each page.
                             </p>
                         </div>
 
@@ -153,11 +169,14 @@
                     <!-- mid fi -->
                     <div>
                         <div>
+                            <h3>Mid-fi wireframes</h3>
+                        </div>
+
+                        <div>
                             <p>
-                                Mid-fi wireframes: Figma was used to edit the arrangement of the selected components and
-                                elements used for each page. Real text was added to buttons, titles, sub-headings,
-                                paragraph
-                                sections, etc.
+                                Figma was used to edit the arrangement of the selected components and elements used for
+                                each page. Real text was added to buttons, titles, sub-headings, paragraph sections,
+                                etc.
                             </p>
                         </div>
 
@@ -237,8 +256,13 @@
                     <!-- hi fi -->
                     <div>
                         <div>
+                            <h3>Hi-fi wireframes</h3>
+                        </div>
+
+                        <div>
                             <p>
-                                High-fi wireframes: Figma was used to add colour to the wireframes, using a colour scheme from the style guide. The style guide's typography was also applied at this stage.
+                                Figma was used to add colour to the wireframes, using a colour scheme from the style
+                                guide. The style guide's typography was also applied at this stage.
                             </p>
                         </div>
 
@@ -315,6 +339,35 @@
                         </div>
                     </div>
 
+                    <!-- mockups -->
+                    <div>
+                        <div>
+                            <h3>Mockups</h3>
+                        </div>
+
+                        <div>
+                            <p>
+                                These mockups illustrate how the devices look on mobile phones when users are on the app
+                                at various locations.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- conclusion -->
+                <div>
+                    <div>
+                        <h2>Conclusion</h2>
+                    </div>
+
+                    <div>
+                        <p>
+                            Creating a vintage clothing app, for 25 to 34 year olds, was a success. Using Balsamiq
+                            wireframes allowed for rapid sketches of low fidelity wireframes to be created. Figma was
+                            useful at adding real text and a colour scheme to the mobile screens' mid fidelity
+                            wireframes. All the key functionalities were implemented.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
