Add mockups to Stitched page

--- a/pages/stitched.html
+++ b/pages/stitched.html
@@ -351,6 +351,29 @@
                                 at various locations.
                             </p>
                         </div>
+
+                        <div>
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mockups/big-screens/image-product.png">
+                                <img src="../img/stitched/mockups/small-screens/image-product.png"
+                                    alt="Stitched 'image product' mockups">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mockups/big-screens/image-sign-up.png">
+                                <img src="../img/stitched/mockups/small-screens/image-sign-up.png"
+                                    alt="Stitched 'image sign up' mockups">
+                            </picture>
+
+                            <picture>
+                                <source media="(min-width:992px)"
+                                    srcset="../img/stitched/mockups/big-screens/image-upload.png">
+                                <img src="../img/stitched/mockups/small-screens/image-upload.png"
+                                    alt="Stitched 'image upload' mockups">
+                            </picture>
+                        </div>
                     </div>
                 </div>
 
